--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,16 @@
-.App {
-  text-align: center;
+.menu li i{
+  color: rgb(117, 117, 117);
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.menu li{
+  margin-bottom: 5px;
+  padding: 5px;
+  border-radius: 5px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.menu li:hover{
+  background-color: rgba(173, 173, 173, 0.201); 
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.menu li a{
+  text-decoration: none;
+  font-size: 1.2rem;
+  color: rgb(39, 39, 39);
 }
